--- a/apps/xbufr/version.h.in
+++ b/apps/xbufr/version.h.in
@@ -1,5 +1,5 @@
-#define VERSION_MAJOR 0
-#define VERSION_MINOR 9
-#define VERSION_PATCH 82
+#define VERSION_MAJOR @PROJECT_VERSION_MAJOR@
+#define VERSION_MINOR @PROJECT_VERSION_MINOR@
+#define VERSION_PATCH @PROJECT_VERSION_PATCH@
 
-#define REVISION _GIT_REVISION_
+#define GIT_REVISION @GIT_REVISION@
