--- a/.github/workflows/release_macos.yml
+++ b/.github/workflows/release_macos.yml
@@ -1,4 +1,3 @@
-
 name: Release macOS
 
 on:
@@ -10,25 +9,30 @@ jobs:
     runs-on: macos-latest
 
     steps:
+
     - name: Checkout
       uses: actions/checkout@v2
 
-    - name: Update brew packages
+    - name: Build qt
       run: |
-        brew install qt
+        brew install md5sha1sum ninja
+        mkdir qt610 && cd qt610
+        ../scripts/build_qt.sh
 
     - name: Build
       run: |
-        echo "VERSION=$(cat VERSION)" >> $GITHUB_ENV
+        VERSION=$(cat VERSION)
+        echo "VERSION=${VERSION}" >> $GITHUB_ENV
         mkdir build && cd build
-        cmake .. -DCMAKE_INSTALL_PREFIX=install
-        make install VERBOSE=1
+        cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH=${GITHUB_WORKSPACE}/qt610/qt-6.1.0 -DCMAKE_INSTALL_PREFIX=install
+        make install
+        mv xbufr.dmg  xbufr-macos-${VERSION}.dmg
 
     - name: Release
       uses: softprops/action-gh-release@v1
       with:
         tag_name: ${{ env.VERSION }}
         files: |
-          ./build/xbufr.dmg
+          ./build/xbufr*.dmg
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
